Fixes for the review

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -140,6 +140,20 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
   background-color: #de1f0e !important;
 }
 
+.order-1 {
+  -webkit-order: 1;
+  order: 1;
+}
+
+.order-2 {
+  -webkit-order: 2;
+  order: 2;
+}
+
+.order-3 {
+  -webkit-order: 3;
+  order: 3;
+}
 /*#endregion*/
 
 .container {
@@ -361,6 +375,82 @@ header.fixed {
 
 /*#endregion */
 
+/*#region Collapse menu*/
+
+.navbar-color {
+  background: white;
+  position: absolute;
+  right: 0;
+  height:calc(100vh - 50px);
+}
+
+.navbar-color form {
+  position: relative;
+  padding-right: 20px;
+  margin-left: 15px;
+  margin-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  display: block;
+  height: 22px;
+}
+
+.page-header .navbar-color form input {
+  font-size: 16px;
+  height: 20px;
+  width: 100%;
+  position: static;
+  color: rgba(0, 0, 0, 0.55);
+  background-color: white;
+}
+
+.page-header .navbar-color form label {
+  top: 0;
+  right: 0;
+}
+
+.navbar-color .navbar-nav {
+  width:220px;
+}
+
+.navbar-color li {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.navbar-color a {
+  padding: 5px 15px;
+  position: relative;
+  font-size: 21px;
+  line-height: 24px;
+  font-weight: bold;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.navbar-color a::after {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 8px;
+  height: 14px;
+  -webkit-mask-image: url(https://g.newsweek.com/www/images/icon-arrow-right.svg);
+  mask-image: url(https://g.newsweek.com/www/images/icon-arrow-right.svg);
+  margin-left: 10px;
+  position: absolute;
+  right: 15px;
+  top: 12px;
+  background-color:black;
+}
+
+.navbar-color li:hover {
+  background-color: black;
+  color: white;
+}
+
+.navbar-color a:hover::after {
+  background-color: #f72210;
+}
+
+
 #sticky3, #sticky4 {
   position: -webkit-sticky;
   position: sticky;
@@ -454,7 +544,7 @@ header.fixed {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  width: 63px;
+  width: 63px !important;
   height: 63px;
   background: url(https://g.newsweek.com/www/images/opinion-headshot-bg.png) center no-repeat #f72210;
   overflow: hidden;
@@ -1085,3 +1175,235 @@ a.left-arrow:hover {
     display: none;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .col-sm-5 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .col-sm-7 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .order-mw-768-2 {
+    -webkit-order: 2;
+    order: 2;
+  }
+  .order-mw-768-1 {
+    -webkit-order: 1;
+    order: 1;
+  }
+
+  .col-sm-3 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .col-sm-6 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .col-sm-4 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .page-header.fixed .top-header .col-2 {
+    right: -18px;
+}
+
+}
+
+@media (max-width: 767px) and (min-width: 481px) {
+  #home-featured-more article .image,
+  .subfeature-2 .image {
+      width: 258px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .top-header .col-2 {
+      position: absolute;
+      top: 12px;
+      right: 30px;
+  }
+}
+
+
+/* Icon 1 */
+
+.animated-icon1, .animated-icon2, .animated-icon3 {
+  width: 30px;
+  height: 20px;
+  position: relative;
+  margin: 0px;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  }
+  
+  .animated-icon1 span, .animated-icon2 span, .animated-icon3 span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+  }
+  
+  .animated-icon1 span {
+  background: #e65100;
+  }
+  
+  .animated-icon2 span {
+  background: #e3f2fd;
+  }
+  
+  .animated-icon3 span {
+  background: #f3e5f5;
+  }
+  
+  .animated-icon1 span:nth-child(1) {
+  top: 0px;
+  }
+  
+  .animated-icon1 span:nth-child(2) {
+  top: 10px;
+  }
+  
+  .animated-icon1 span:nth-child(3) {
+  top: 20px;
+  }
+  
+  .animated-icon1.open span:nth-child(1) {
+  top: 11px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+  }
+  
+  .animated-icon1.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+  }
+  
+  .animated-icon1.open span:nth-child(3) {
+  top: 11px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+  }
+  
+  /* Icon 3*/
+  
+  .animated-icon2 span:nth-child(1) {
+  top: 0px;
+  }
+  
+  .animated-icon2 span:nth-child(2), .animated-icon2 span:nth-child(3) {
+  top: 10px;
+  }
+  
+  .animated-icon2 span:nth-child(4) {
+  top: 20px;
+  }
+  
+  .animated-icon2.open span:nth-child(1) {
+  top: 11px;
+  width: 0%;
+  left: 50%;
+  }
+  
+  .animated-icon2.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  }
+  
+  .animated-icon2.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  }
+  
+  .animated-icon2.open span:nth-child(4) {
+  top: 11px;
+  width: 0%;
+  left: 50%;
+  }
+  
+  /* Icon 4 */
+  
+  .animated-icon3 span:nth-child(1) {
+  top: 0px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+  }
+  
+  .animated-icon3 span:nth-child(2) {
+  top: 10px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+  }
+  
+  .animated-icon3 span:nth-child(3) {
+  top: 20px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+  }
+  
+  .animated-icon3.open span:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 0px;
+  left: 8px;
+  }
+  
+  .animated-icon3.open span:nth-child(2) {
+  width: 0%;
+  opacity: 0;
+  }
+  
+  .animated-icon3.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  top: 21px;
+  left: 8px;
+  }
